--- a/Reto_1_Caracterizacion_de_VA.ipynb
+++ b/Reto_1_Caracterizacion_de_VA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOg4lcA0FCvrCETn8XspSJw",
+      "authorship_tag": "ABX9TyONVwZg1HpVJlbNoHey/Ftv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Ly-9_hY9CA14"
       },
@@ -79,7 +79,7 @@
         "id": "DxHH3LKlVAti",
         "outputId": "0d0763ab-a562-4c20-eba6-0852f24355e6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,9 +112,9 @@
           "height": 310
         },
         "id": "Cte-kR_FVIZS",
-        "outputId": "bfac46fa-5d15-4062-9ae3-fb00936df0c0"
+        "outputId": "f45990b7-d050-4b07-bd74-0d1443a3f3e7"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,7 +150,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2085e353-b82c-46f0-8478-d586f69e2cb1\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-6912e061-40a5-4e45-8b10-fa59bdca76c4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -229,7 +229,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2085e353-b82c-46f0-8478-d586f69e2cb1')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6912e061-40a5-4e45-8b10-fa59bdca76c4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -281,12 +281,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2085e353-b82c-46f0-8478-d586f69e2cb1 button.colab-df-convert');\n",
+              "        document.querySelector('#df-6912e061-40a5-4e45-8b10-fa59bdca76c4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2085e353-b82c-46f0-8478-d586f69e2cb1');\n",
+              "        const element = document.querySelector('#df-6912e061-40a5-4e45-8b10-fa59bdca76c4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -316,7 +316,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 17
         }
       ]
     },
@@ -335,9 +335,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 310
         },
-        "outputId": "b86014e9-e467-4f73-f956-b382f288ef14"
+        "outputId": "befe9c8f-8f5c-456d-f64f-3283c935229c"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +366,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b063ce2e-5495-4943-b67d-4c0356f6c46c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-29f00855-44e1-4475-b88f-3ce0716ae7c4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -445,7 +445,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b063ce2e-5495-4943-b67d-4c0356f6c46c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29f00855-44e1-4475-b88f-3ce0716ae7c4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -497,12 +497,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b063ce2e-5495-4943-b67d-4c0356f6c46c button.colab-df-convert');\n",
+              "        document.querySelector('#df-29f00855-44e1-4475-b88f-3ce0716ae7c4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b063ce2e-5495-4943-b67d-4c0356f6c46c');\n",
+              "        const element = document.querySelector('#df-29f00855-44e1-4475-b88f-3ce0716ae7c4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -532,7 +532,98 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# revisamos si hay datos nulos y los eliminamos\n",
+        "df.isnull().sum()\n",
+        "# Nota: no hay datos nulos en el dataset, entonces no se elimina nada"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 304
+        },
+        "id": "CWTRrDmnxTMz",
+        "outputId": "081a9afc-f4ba-4602-d4d2-1387fce86d01"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0\n",
+              "Fechas                                0\n",
+              "Transacciones Diarias                 0\n",
+              "Valor Transado (millones)             0\n",
+              "Transacciones Fallidas (Freq)         0\n",
+              "Valor Generado Promedio (Millones)    0\n",
+              "Descripción Evento                    0\n",
+              "dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>0</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Fechas</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Transacciones Diarias</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Valor Transado (millones)</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Transacciones Fallidas (Freq)</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Valor Generado Promedio (Millones)</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Descripción Evento</th>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
@@ -555,7 +646,7 @@
         "# Seguimos con la construccion de la grafica de la distribucion de agregada de las pérdidas\n",
         "plt.figure(figsize=(10,5))\n",
         "sns.histplot(lda, bins=10, kde= True)\n",
-        "plt.xlabel(\"Pérdida (KMUSD)\")\n",
+        "plt.xlabel(\"Pérdida (MUSD)\")\n",
         "plt.grid()\n",
         "plt.show"
       ],
@@ -567,7 +658,7 @@
         "id": "Py8V51IZo_E2",
         "outputId": "13a4f3f2-1c29-4e4e-e435-8389adf37204"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -703,7 +794,7 @@
         "id": "J3af9PSbqiVK",
         "outputId": "ceb1f9a8-3806-4598-f299-8d935932abe0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,7 +834,7 @@
         "id": "5ILCXpQrqpOb",
         "outputId": "5d77a065-8dd5-45f3-d850-051673242c99"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1050,7 +1141,7 @@
         "id": "voNKLcp4qxCc",
         "outputId": "e061f552-ef49-4f39-9c37-caea85e10f1c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1259,7 +1350,10 @@
         "\n",
         "A partir de las métricas de tendencia central y dispersión se observa que los datos tienden a concentrarse por debajo de la media de las pérdidas, comportamiento consistente con una distribución altamente asimétrica. El coeficiente de asimetría es positivo y elevado (3.35) lo que nos habla una cola larga hacia la derecha, lo que implica que, en la mayoría de los casos, las pérdidas asociadas a fallas tecnológicas son relativamente bajas y corresponden a eventos frecuentes y esperados (perdidas esperadas o no asegurables como vimos en clase), mientras que los valores altos aparecen de forma aislada y poco recurrente.\n",
         "\n",
-        "Por su parte, el coeficiente de curtosis de 14.17 muestra una distribución, con una alta concentración de observaciones en en los valores bajos y colas pesadas. Esto se ve también en la distribución por intervalos, donde la mayoría de los eventos estan en los rangos inferiores y solo unos pocos alcanzan montos extremos. En resumen, el análisis refuerza la idea de que el riesgo cotidiano está dominado por pérdidas menores, aunque tambien suceden eventos excepcionales de perdidas significativas"
+        "Por su parte, el coeficiente de curtosis de 14.17 muestra una distribución, con una alta concentración de observaciones en en los valores bajos y colas pesadas. Esto se ve también en la distribución por intervalos, donde la mayoría de los eventos estan en los rangos inferiores y solo unos pocos alcanzan montos extremos. En resumen, el análisis refuerza la idea de que el riesgo cotidiano está dominado por pérdidas menores, aunque tambien suceden eventos excepcionales de perdidas significativas\n",
+        "\n",
+        "**Posibles Mejoras**\n",
+        "Si se estandarizara el nivel de riesgo junto con el nivel de gestión, entonces podriamos agregar los costos adicionales mencionados como capacitacion de personal, mantenimiento de sistemas, etc. Asi, tendriamos una comprensión mayor de las perdidas generadas por estos fallos. Para hacerlo, posiblemente podriamos crear un modelo de clusterizacion en base a texto porque el texto en la descripcion del fallo es consistente y estandarizado y categorizar cada descripcion del fallo con un nivel de restion correspondiente."
       ]
     }
   ]
